Git Tests/force-app/main/default/default/objects/Pricebook2/fields/AtivoECommerce__c.field-meta.xml
<CustomField>
    <fullName>AtivoECommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo e-commerce?</label>
    <type>Checkbox</type>
</CustomField>