Git Tests/force-app/main/default/default/objects/Pricebook2/fields/CodigoCentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CodigoCentroDistribuicao__c</fullName>
    <label>Código do centro de distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>