Git Tests/force-app/main/default/default/objects/Pricebook2/fields/CodigoTabela__c.field-meta.xml
<CustomField>
    <fullName>CodigoTabela__c</fullName>
    <externalId>true</externalId>
    <label>Código da Tabela</label>
    <length>10</length>
    <type>Text</type>
</CustomField>