Git Tests/force-app/main/default/default/objects/Pricebook2/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Catálogos de preços</relationshipLabel>
    <relationshipName>CatalogoPreco</relationshipName>
    <type>Lookup</type>
</CustomField>