Git Tests/force-app/main/default/default/objects/Pricebook2/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <label>Data início</label>
    <type>Date</type>
</CustomField>