Git Tests/force-app/main/default/default/objects/Pricebook2/fields/NomeCentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>NomeCentroDistribuicao__c</fullName>
    <label>Nome do centro de distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>