Git Tests/force-app/main/default/default/objects/Pricebook2/fields/SegmentoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCliente__c</fullName>
    <label>Segmento do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>